# universal-base-adapter-protocol

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONFORMANCE_CHECKLIST.yml  CONTRIBUTING.md  EMERGING_PATTERN_VETTING_NOTE_v1_5.md  GEMINI.md  JOURNAL.md  KIMI.md  METADATA.yml  README.md  SECURITY.md  UNIVERSAL_BASE_ADAPTER_PROTOCOL.md  UNIVERSAL_BASE_ADAPTER_PROTOCOL_v1.6.md  llms.txt
.github/: CODEOWNERS  copilot-instructions.md
ARH Design Pipeline Protocol/: 1 ARH Research Protocol (RP) v0.md  2 ARH Research-to-Design Protocol (RTDP) v0.md  3 ARH Design-to-Implementation Protocol (DTIP) v0.md
ARH Universal Frontend Design/: SKILL.md
ARH Various Protocols References/arh-python-qa/: AGENT_HANDBOOK.md  README.md  pyproject.toml
ARH Various Protocols References/arh-python-qa/src/arh_python_qa/: __init__.py  cli.py  findings.py  render.py  runners.py
ARH Various Protocols References/arh-skill-qa/: AGENT_HANDBOOK.md  README.md  pyproject.toml
ARH Various Protocols References/arh-skill-qa/src/arh_skill_qa/: __init__.py  analyzer.py  cli.py  models.py  registry.py  render.py
adapters/: API_WEB.md  CLI.md  DOCUMENTATION_SKILL_ADAPTER.md  MCP.md  SANDBOX_ADAPTER.metadata.yml  SUPPLY_CHAIN_ADAPTER.md  WEBAPP_FULLSTACK_ADAPTER.md  WORKER.md
advanced/: LSP.md  SANDBOX.md  SKILL.md
examples/: envelope.composite.json  handoff-a-to-b.md
recipes/: README.md  index.yml
reference/: ANTI_PATTERNS.md  PORT_ADAPTER_BOUNDARY_NOTES.md  PROJECT_AGENT_READINESS_AUDIT.md  THE_ART_OF_NAMING.md
schemas/: conformance-linter-output.schema.json  handoff-packet.json  (+3 more)
(+82 files in other folders)
