[project]
name = "arh-python-qa"
version = "0.1.0"
description = "ARH Python quality pipeline orchestrator — ruff, mypy, pytest, vulture, pip-audit in one command"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
arh-python-qa = "arh_python_qa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arh_python_qa"]
