[project]
name = "arh-skill-qa"
version = "0.1.0"
description = "ARH skill quality gate for SKILL.md packages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
arh-skill-qa = "arh_skill_qa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arh_skill_qa"]
